infra-k8s/k8s-apps/my-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-service
  namespace: fido
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-service
  template:
    metadata:
      labels:
        app: my-service
    spec:
      containers:
        - name: my-service
          image: my-registry.local:5000/fido-app:0.0.2
          # image: sharhanalhassan/fido-app:0.0.2
          ports:
            - containerPort: 8000
