infra-k8s/k8s-apps/my-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: fido
spec:
  ports:
  - port: 80
    targetPort: 6001
  selector:
    app: my-service
